--- a/darmon-database/package.json
+++ b/darmon-database/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "testing-darmon-devotionals",
+  "name": "darmon-database",
   "private": true,
   "version": "1.0.0",
   "main": "package.json",
@@ -15,10 +15,10 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/vision": "^5.4.0",
+    "@sanity/vision": "^5.6.0",
     "react": "^19.1",
     "react-dom": "^19.1",
-    "sanity": "^5.4.0",
+    "sanity": "^5.6.0",
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
